# mesh_adaptive_streaming

./: .gitignore  CMakeLists.txt  README.md  compression_test.cpp  test.cpp
results/: poho.csv  results_20240307113020.csv  results_cl_10_qp_11_2403081450.csv  results_cl_10_qp_13_2403081526.csv  results_cl_10qp_11_20240308143743.csv
